--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
   },
   "license": "MIT",
   "dependencies": {
-    "electron-squirrel-startup": "^1.0.0"
+    "electron-squirrel-startup": "^1.0.0",
+    "jquery": "^3.7.1",
+    "mathquill": "^0.10.1-a"
   }
 }
